bpo-46161: Fix bug in starunpack_helper in compile.c (GH-30235)